changes made to code as per GEMINI to HoldService, Redis Config and Booking Service