@@ -2,6 +2,7 @@ package com.movie.bookMyShow.service;
 
 import com.movie.bookMyShow.dto.*;
 import com.movie.bookMyShow.exception.ResourceNotFoundException;
+import com.movie.bookMyShow.exception.SeatAlreadyBookedException;
 import com.movie.bookMyShow.exception.SeatAlreadyHeldException;
 import com.movie.bookMyShow.model.Booking;
 import com.movie.bookMyShow.model.Seat;
@@ -13,6 +14,7 @@ import com.movie.bookMyShow.service.payment.Crypto.CryptoGateway;
 import com.movie.bookMyShow.service.payment.Crypto.CryptoGatewayFactory;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -43,46 +45,52 @@ public class BookingService {
 
     @Transactional
     public BookingResponse initiateBooking(BookingRequest request) {
-        // 1. Validate show exists
+        // 1. Validate show and seats exist.
         Show show = showRepo.findById(request.getShowId())
-                .orElseThrow(() -> new ResourceNotFoundException("Show not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Show not found with id: " + request.getShowId()));
 
-        // 2. Validate all seats exist
-        List<Seat> seats = request.getSeatIds().stream()
-                .map(seatId -> seatRepo.findById(seatId)
-                        .orElseThrow(() -> new ResourceNotFoundException("Seat not found: " + seatId)))
-                .toList();
+        List<Seat> seats = seatRepo.findAllById(request.getSeatIds());
+        if (seats.size() != request.getSeatIds().size()) {
+            throw new ResourceNotFoundException("One or more seats not found.");
+        }
 
-        // 3. Check seat availability in DB only (Redis holds checked atomically in holdSeats)
-        seatHoldService.areSeatsAvailable(request.getShowId(), request.getSeatIds());
-        
-        // 4. Create hold in Redis (this will atomically check and acquire seats)
-        String holdId = seatHoldService.holdSeats(request.getShowId(), request.getSeatIds());
-
-            // Calculate and set price
-            double price = calculatePrice(request.getSeatIds(), request.getPaymentMethod());
+        try {
+            // 2. Atomically acquire a hold on the seats.
+            // This single method call now handles checking DB availability AND acquiring Redis holds safely.
+            String holdId = seatHoldService.holdSeats(request.getShowId(), request.getSeatIds());
+            
+            // 3. If the hold is successful, proceed with payment logic.
+            double price = calculatePrice(seats, request.getPaymentMethod());
             request.setPrice(price);
             request.setHoldId(holdId);
-            // Handle crypto payments differently
+
             String depositAddress = null;
             if ("ETH".equals(request.getPaymentMethod())) {
                 CryptoGateway cryptoGateway = cryptoGatewayFactory.getCryptoGateway(request.getPaymentMethod());
                 depositAddress = cryptoGateway.generateDepositAddress(holdId);
                 request.setPublicKey(depositAddress);
             }
-        paymentService.processPaymentAsync(holdId, request, show, seats);
-        if( depositAddress == null) {
-            depositAddress = holdId; // For non-crypto payments
+
+            // 4. Asynchronously process the payment.
+            paymentService.processPaymentAsync(holdId, request, show, seats);
+
+            // For non-crypto payments, the holdId can act as the transaction reference.
+            String paymentReference = (depositAddress != null) ? depositAddress : holdId;
+            
+            return new BookingResponse("Payment process initiated. Seats held for 5 minutes.", holdId, paymentReference, request.getPaymentMethod(), price);
+
+        } catch (SeatAlreadyBookedException | SeatAlreadyHeldException e) {
+            // These exceptions are expected and should be re-thrown to be handled by the GlobalExceptionHandler.
+            throw e;
         }
-        return new BookingResponse("Payment Process Initiated and seat held for 5mins", holdId, depositAddress, request.getPaymentMethod(), price);
     }
 
-    private double calculatePrice(List<Long> seatIds, String paymentMethod) {
-        // Simple pricing logic - can be enhanced later
-        if("ETH".equals(paymentMethod)) {
-            return seatIds.size() * 0.001; // Assuming 0.01 ETH per seat
+    private double calculatePrice(List<Seat> seats, String paymentMethod) {
+        // This can be enhanced later with pricing based on SeatCategory
+        if ("ETH".equals(paymentMethod)) {
+            return seats.size() * 0.001; // Example: 0.001 ETH per seat
         }
-        return seatIds.size() * 200.0; // Assuming 200 per seat
+        return seats.size() * 200.0; // Example: 200 INR per seat
     }
 
     public TicketDTO getBooking(String holdId) {
@@ -91,7 +99,7 @@ public class BookingService {
         
         List<SeatDTO> seatDTOs = booking.getSeats().stream()
                 .map(SeatDTO::fromSeat)
-                .toList();
+                .collect(Collectors.toList());
         
         return new TicketDTO(
                 booking.getShow().getShowId(),
@@ -104,3 +112,4 @@ public class BookingService {
         );
     }
 }
+
